[package]
name = "csv-processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1.1"
thiserror = "1.0"

[dev-dependencies]
quickcheck = "1.0"
rand = "0.8"
